# MellOs

./: .anything_here.md.kate-swp  .clang-format  .editorconfig  .gdbinit  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICAL_STATEMENT.md  Kconfig  Makefile  README.md  anything_here.md  cdpre.cfg  chs_calc.py  commands.bat  commands.sh  contributions.md  cross-compiler.sh  fdpre.cfg  grub.cfg  makefile  map.txt  requirements.sh  test.sh  test_disk.img  test_disk.txt
0_draft/: cross-compiler.sh  nyotengu.c
A_Setup/: README.md  setup-gcc-arch.sh  setup-gcc-debian.sh  setup-gcc-linux.sh  setup-gcc-macos.sh  setup-gcc-windows.bat  setup-gcc.sh
Bootloader/: AvailableMemory.asm  EnterPM.asm  GDT.asm  PrintDecimal.asm  PrintString.asm  PrintStringPM.asm  README.md  ReadFromDisk.asm  boot.asm  disk.asm  gdt.asm  memory.asm  new_memory.asm  print_dec.asm  print_string32.asm  stage_2.asm
CPU/: idt.cpp  idt.h  interrupt.asm  irq.cpp  irq.h  isr.cpp  isr.h  timer.cpp  timer.h
Documentation/: Bugs.md  Changelog.md  Future.md  Why.md  WorkInProgress.md
Drivers/: Disk.c  Disk.cpp  Disk.h  Floppy.c  Floppy.cpp  Floppy.h  ISA_DMA.c  ISA_DMA.cpp  ISA_DMA.h  Keyboard.c  Keyboard.cpp  Keyboard.h  PCSpeaker.c  PCSpeaker.h  Typedefs.cpp  VGA_Text.c  VGA_Text.cpp  VGA_Text.h  driver_addon.c  driver_addon.h  port_io.c  port_io.cpp  port_io.h
FileSystem/: fs_interface.c  fs_interface.h  placeholder_fs.c  placeholder_fs.h
GUI/: CMakeLists.txt  README.md  gui.c  gui.h  mouse_handler.c  mouse_handler.h  mouse_icon.h  vterm.c  vterm.h
Kernel/: BIG.txt  IncBins.asm  KPArt.txt  README.md  bdr.txt  empty_end.asm  fool.txt  fool_new.txt  fool_new_design.txt  john.txt  kernel.c  kernel.cpp  kernel.h  kernel_entry.asm  (+1 more)
cpu/: CMakeLists.txt  README.md  cpuid.c  msr.c  msr.h
cpu/gdt/: README.md  gdt.c  gdt.h  gdt_loader.asm
cpu/include/: timer.h
cpu/include/cpu/: cpuid.h  gdt.h  idt.h  irq.h  isr.h  msr.h
cpu/interrupts/: README.md  idt.c  idt.h  interrupt.asm  irq.c  irq.h  isr.c
cpu/timer/: README.md  timer.c  timer.h
data_structures/: CMakeLists.txt  README.md  allocator.c  allocator.h  bitmap.c  bitmap.h  circular_buffer.c  circular_buffer.h  circular_list.c  circular_list.h  circular_queue.c  hash_map.c  linked_list.c  list.c  list.h  rbtree.c  rbtree.h
data_structures/include/: allocator.h  bitmap.h  circular_buffer.h  circular_queue.h  hash_map.h  linked_list.h
drivers/: CMakeLists.txt  README.md  disk.c  disk.h  ethernet.c  ethernet.h  keyboard.c  keyboard.h  mouse.c  mouse.h  pc_speaker.c  pci.c  pci.h  port_io.c  port_io.h  ramdisk.c  rtc.c  rtc.h  rtl8139.c  rtl8139.h  uart.c  uart.h  vesa_text.c  vesa_text.h  vga_text.c  vga_text.h
drivers/block_devices/: lba_ata_rw.asm  parallel_ata_pio.c
drivers/filesystems/devfs/: devfs.c
drivers/filesystems/fat/: fat_util.c
drivers/filesystems/fat/12/: fat12.c  fat12_rw.c  fat12_rw.h
drivers/filesystems/procfs/: procfs.c
drivers/include/: disk.h  fat.h  keyboard.h  mouse.h  pc_speaker.h  port_io.h  ramdisk.h  rtc.h  statfs.h  uart.h  vga_text.h
drivers/include/filesystems/: devfs.h  procfs.h
drivers/network/: arp.c  arp.h  ethernet.c  ethernet.h  internet.c  internet.h  ipv4.c  ipv4.h  rtl8139.c  rtl8139.h  udp.c  udp.h
drivers/private_utils/include/: pata_utils.h
drivers/private_utils/pata/: pata_disk_info.c  pata_disk_interface.c
drivers/vesa/: README.md  test_font.h  vesa.c  vesa.h  vesa_text.c  vesa_text.h
file_system/: CMakeLists.txt  README.md  file_system.c  file_system.h
file_system/ext2/: ext2.c  ext2.h
file_system/include/: file_system.h
kernel/: CMakeLists.txt  IncBins.asm  KPArt.txt  README.md  block_device_manager.c  boot_parsing.c  empty_end.asm  file_descritor.c  file_string_formatting.c  fool_new.txt  kernel.c  kernel.h  kernel.ld  kernel_entry.asm  kernel_stdio.c  memory_mapper.c  memory_mapper.h  mount_manager.c  multiboot_tags.h  pipe.c  ramfs.c  stdio_devices.c  streams.c
kernel/algorithms/: djb2.c
kernel/filesystem/: block_device_manager.c  dentry.c  file_descritor.c  file_string_formatting.c  mount_manager.c  ramfs.c
kernel/include/mellos/: block_device.h  fd.h  fs.h  hash.h  pipe.h  ramfs.h
kernel/include/mellos/kernel/: dentry.h  kernel.h  kernel_stdio.h  memory_mapper.h  mount_manager.h  multiboot_tags.h  stdio_devices.h  streams.h
libc/: CMakeLists.txt  assert.c  errno.c  error_handling.c  format.c  io.c  math.c  memory_functions.c  stdio_stub.c  string.c  unistd.c
libc/include/: assert.h  errno.h  error_handling.h  limits.h  math.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
memory/: CMakeLists.txt  README.md  dynamic_mem.c  dynamic_mem.h  mem.c  mem.h  process_memory.c  process_memory.h  stack_guard.c  stack_guard.h
memory/paging/: README.md  frame_allocator.c  frame_allocator.h  paging.asm  paging.c  paging.h  paging_utils.h  pat.c  pat.h
processes/: CMakeLists.txt  README.md  processes.c  processes.h  processes_asm.asm  spinlock.c  spinlock.h  stack_utils.h
shell/: CMakeLists.txt  README.md  shell.c  shell.h  shell_functions.c  shell_functions.h
shell/functions/: README.md  disk.c  displayinfo.c  displayinfo.h  exec.c  fdef.h  file_sys.c  functions.h  kill.c  meminfo.c  misc.c  mount.c  roll.c  text.c  text_editor.c  unix_files.c  vell.c  vell.h
shell/functions/frogues/: frogues.c  frogues.h  frogues_img.h
shell/functions/juggleballs/: includes.h  main.c
shell/functions/perkeng/: includes.h  main.c
shell/functions/sperkaster/: includes.h  main.c
shell/include/shell/: shell.h  shell_functions.h  vell.h
syscalls/: CMakeLists.txt  README.md  syscalls.c  syscalls.h
syscalls/include/: syscalls.h
test/: CMakeLists.txt  README.md  fs_test.c  fs_test.h  mem_test.c  mem_test.h
utils/: CMakeLists.txt  README.md  assert.c  assert.h  bit_manip.h  bitmap.h  conversions.c  conversions.h  errno.h  error_handling.c  format.c  format.h  math.c  math.h  memory_area_spec.h  random.c  random.h  string.c  string.h  typedefs.h
utils/include/: bit_manip.h  conversions.h  memory_area_spec.h  random.h
(+138 files in other folders)
